--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,5 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<%= link_to "Crete New User!", new_user_path%> <br>
+
+<% @users.each do |u| %>
+  <h1><%= link_to u.name, user_path(u) %> <%= link_to "x", user_path(u), method: :delete%></h1>
+<% end %>
