--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,5 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<%=form_for @user do |f| %>
+  Name: <%= f.text_field :name %> <br>
+  Tell me about yourself: <%= f.text_field :bio %>
+  <%= f.submit%>
+<% end %>
