--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,5 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+User: <h2><%= @user.name %></h2> <br>
+Bio: <h2><%= @user.bio %></h2>
+
+<br>
+<%= link_to "Back to all Users", users_path%>
