Added comment model

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,4 +7,9 @@
   <h1><%= link_to post.user.name , user_path(post.user) %> <%= link_to "x", post_path(post), method: :delete%></h1>
   <p><%= post.vote %></p>
   <p><%= post.embed %></p>
+  <%= post.comments.count %>  
+  <% post.comments.each do |comment| %>
+    <p><%= comment.user.name%></p>
+    <p><%= comment.body %></p>
+  <% end %>
 <% end %>
