--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,8 +4,10 @@
 <%= link_to "View all Users", users_path%>
 
 <% @posts.each do |post| %>
-  <h2><%= link_to post.user.name , user_path(post.user) %> <%= link_to "x", post_path(post), method: :delete%></h2>
+  <h2><%= link_to post.user.name , user_path(post.user) %> <%= link_to "delete post", post_path(post), method: :delete%></h2>
+  <%= link_to 'upvote', "/posts/#{post.id}/upvote" %>
   <p><%= post.vote %></p>
+  <%= link_to 'downvote', "/posts/#{post.id}/downvote" %>
   <p><%= post.embed %></p>
   <%= post.comments.count %> comment
   <% post.comments.each do |comment| %>
