--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,10 +5,23 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 </head>
 <body>
 
+  <%= render 'layouts/nav'%>
+  <div class="container">
+    
+  <% if logged_in? %>
+  <%= link_to "Logout", logout_path, {method: "DELETE"} %>
+  <% else %>
+      <%= link_to "Login", new_session_path %>
+  <% end %>
+
+
 <%= yield %>
+
+</div>
 
 </body>
 </html>
