--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,6 @@
-User: <h2><%= @user.name %></h2> <br>
+<hr>
+User: <h2><%= @user.name %></h2> <hr>
 Bio: <h2><%= @user.bio %></h2>
 
-<br>
+<hr>
 <%= link_to "Back to all Users", users_path%>
