--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,5 @@
 <hr>
-
+<p><%= @post.vote %></p>
 <p><%= @post.embed.html_safe %></p>
 <br>
 <p> Posted by: <%= @post.user.name %></p>
@@ -7,12 +7,12 @@
 <%= @post.comments.count %> comment
 
 <br>
-
-<%= form_for [@post, @comment] do |f| %>
-  <%= f.text_area :body %>
-  <%= f.submit %>
+<%if logged_in?%>
+  <%= form_for [@post, @comment] do |f| %>
+    <%= f.text_area :body %>
+    <%= f.submit %>
+  <%end%>
 <%end%>
-
 <br>
 
 <% @post.comments.each do |comment| %>
