--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,22 @@
-<h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
+<%= form_for @user, :html => {class: 'new_user form-horizontal'} do |f| %>
+    <div class="row"><legend class="col-md-4 col-md-offset-4">Update Account:</legend></div>
+    <fieldset>
+        <div class="form-group">
+            <%= f.label :name, 'Name*', class: 'col-md-4 control-label' %>
+            <div class="col-md-5">
+                <%= f.text_field :name, class: 'form-control' %>
+            </div>
+        </div>
+        <div class="form-group">
+            <%= f.label :bio, 'Bio*', class: 'col-md-4 control-label' %>
+            <div class="col-md-5">
+                <%= f.text_field :bio, class: 'form-control' %>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-8 col-md-offset-4">
+                <%= f.submit 'Update Account', class: 'btn btn-success' %>
+            </div>
+        </div>
+    </fieldset>
+<% end %>
