--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,18 +1,18 @@
 <nav class="navbar">
   <ol class="breadcrumb">
-  <% if logged_in? %>
-    <li><%= link_to "Songs", posts_path%></li>
-    <li><%= link_to "Users", users_path%></li>
-    <li><%= link_to "Logout", logout_path, {method: "DELETE"} %></li>
-
-  <% else %>
-      <li><%= link_to "Login", new_session_path %></li>
+    <% if logged_in? %>
       <li><%= link_to "Songs", posts_path%></li>
       <li><%= link_to "Users", users_path%></li>
-  <% end %>
-  <%unless logged_in?%>
-    <li><%= link_to "Create Account!", new_user_path%></li>
-  <%end%>
+      <li><%= link_to "Logout", logout_path, {method: "DELETE"} %></li>
+      <li><%= link_to "Edit Profile", edit_user_path(current_user)%></li>
+    <% else %>
+        <li><%= link_to "Login", new_session_path%></li>
+        <li><%= link_to "Songs", posts_path%></li>
+        <li><%= link_to "Users", users_path%></li>
+    <% end %>
+    <%unless logged_in?%>
+      <li><%= link_to "Create Account!", new_user_path%></li>
+    <%end%>
 
-</ol>
+  </ol>
 </nav>
