--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -13,9 +13,18 @@
                 <%= f.text_field :bio, class: 'form-control' %>
             </div>
         </div>
+        <div>
+          Profile Photo: <%= f.file_field :photo %>
+        </div>
+        <hr>
         <div class="form-group">
             <div class="col-md-8 col-md-offset-4">
-                <%= f.submit 'Update Account', class: 'btn btn-success' %>
+                <%= f.submit 'Update Profile', class: 'btn btn-success' %>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-8 col-md-offset-4">
+                <%= link_to 'Delete Account', user_path(current_user), method: :delete, class: 'btn btn-danger'  %>
             </div>
         </div>
     </fieldset>
