--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,18 +1,66 @@
-<nav class="navbar">
-  <ol class="breadcrumb">
-    <% if logged_in? %>
-      <li><%= link_to "Songs", posts_path%></li>
-      <li><%= link_to "Users", users_path%></li>
-      <li><%= link_to "Logout", logout_path, {method: "DELETE"} %></li>
-      <li><%= link_to "Edit Profile", edit_user_path(current_user)%></li>
-    <% else %>
-        <li><%= link_to "Login", new_session_path%></li>
-        <li><%= link_to "Songs", posts_path%></li>
-        <li><%= link_to "Users", users_path%></li>
-    <% end %>
-    <%unless logged_in?%>
-      <li><%= link_to "Create Account!", new_user_path%></li>
-    <%end%>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="/">UG Cloud</a>
+    </div>
 
-  </ol>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><%= link_to "Songs", posts_path%><span class="sr-only">(current)</span></a></li>
+        <li><%= link_to "Users", users_path %></li>
+        <li><a href="#" id="help-btn" data-toggle="modal" data-target="#help-modal">Help</a></li>
+      </ul>
+
+
+      <%= form_tag users_path, method: :get, :class => "navbar-form navbar-left" do %>
+        <div class="form-group">
+          <%= text_field_tag :search, params[:search], :class => "form-control" %>
+          <%= submit_tag "Search User", :class => "btn btn-default" %>
+          <%end%>
+        </div>
+
+      </form>
+      <ul class="nav navbar-nav navbar-right">
+        <% unless logged_in? %>
+          <li><%= link_to "Login", new_session_path%></li>
+          <li><%= link_to "Sign Up", new_user_path%></li>
+        <% else %>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.name %> <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><%= link_to 'Profile', user_path(current_user)%></li>
+            <li><%= link_to 'Settings', edit_user_path(current_user)%></li>
+            <li role="separator" class="divider"></li>
+            <li><%= link_to "Logout", logout_path, {method: "DELETE"} %></li>
+          </ul>
+        </li>
+        <% end %>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
 </nav>
+
+<!-- BEGIN HELP MODAL -->
+<div id="help-modal" class="modal fade" tabindex="-1" role="dialog">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">How To Use UG Cloud</h4>
+      </div>
+      <div class="modal-body">
+        <p>After sign-in, copy embed links from your favorite SoundCloud artists and paste them into the text box at the top of the songs page. This site is meant for UnderGround Soundcloud music. Please refrain from posting songs with more than 100,000 plays.</p>
+        <%= image_tag "Help_SS.png", {style: " width: 100%"}%>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+<!-- END HELP MODAL -->
