--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,18 +1,17 @@
 <p><%= @post.embed.html_safe %></p>
 <hr>
-  Song Score: <h5><%= @post.votes.where({sentiment: 1}).count - @post.votes.where({sentiment: -1}).count %></h5>
+ <h3>Song Score: <%= @post.votes.where({sentiment: 1}).count - @post.votes.where({sentiment: -1}).count %></h3>
 <br>
 <p> Posted by: <%= @post.user.name %></p>
 
-<%= @post.comments.count %> comment
+<%= @post.comments.count %> comments
 
 <br>
 <%if logged_in?%>
   <%= form_for [@post, @comment] do |f| %>
   <hr>
-    <%= f.text_area :body %>
-    <hr>
-    <%= f.submit %>
+    <%= f.text_area :body, :class => "form-control"%>
+    <%= f.submit 'Comment', :class => "btn btn-default" %>
   <%end%>
 <%end%>
 <br>
