Added comment to show user view

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,6 +18,7 @@
  </div>
 <div class="col-xs-9 col-sm-9 col-md-9">
     <%= post.embed.html_safe %>
+    <%= link_to post.comments.count.to_s + " comments", post%>
   </div>
 </div>
 <%end%>
