--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -15,8 +15,8 @@
     <div class="row <%= 'best-song' if post == @best %>">
       <div class="col-xs-2 col-sm-2 col-md-2 vertAlign">
 <div>
-      <h4 class="center"><%= link_to post.user.name, user_path(post.user) %></h4> <p>posted a track.</p>
-      <%= image_tag post.user.photo.url(:thumb), :style => "border: 2px solid black; "%>
+      <h4 class="center"><%= link_to post.user.name, user_path(post.user) %></h4> <p class="center">posted <%= time_ago_in_words(post.created_at) %> ago.</p>
+      <div class="center"><%= image_tag post.user.photo.url(:thumb), :style => "border: 2px solid black; "%></div>
         <%if logged_in? && current_user.id == post.user_id%>
            <p class="center"><%=link_to "delete post", post_path(post), method: :delete%></p>
         <%end%>
