--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -17,9 +17,11 @@
 <br>
 
 <% @post.comments.each do |comment| %>
+<p class="text-muted inline"> Comment <%= time_ago_in_words(comment.created_at) %> ago. </p>
   <strong><%= comment.user.name%></strong>
   <p><%= comment.body %></p>
   <%if logged_in? && current_user.id == comment.user_id%>
-   <%=link_to "x", post_comment_path(@post, comment), method: :delete%></h2>
+   <h2><%=link_to "x", post_comment_path(@post, comment), method: :delete%></h2>
   <%end%>
+  <hr>
 <% end %>
