--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -10,7 +10,7 @@
         <div class="form-group">
             <%= f.label :email, 'Email*', class: 'col-md-4 control-label' %>
             <div class="col-md-5">
-                <%= f.text_field :email, class: 'form-control' %>
+                <%= f.email_field :email, class: 'form-control' %>
             </div>
         </div>
         <div class="form-group">
