add placeholder for search

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -22,7 +22,7 @@
 
       <%= form_tag users_path, method: :get, :class => "navbar-form navbar-left" do %>
         <div class="form-group">
-          <%= text_field_tag :search, params[:search], :class => "form-control" %>
+          <%= text_field_tag :search, params[:search], placeholder: "User name", :class => "form-control" %>
           <%= submit_tag "Search User", :class => "btn btn-default" %>
           <%end%>
         </div>
